--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: bisque;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-weight: 200;
 }
 
 .container {
